Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBooleanInteger.quorum
class Main
    action Main
        integer v = 5
        Test(v)
    end

    action Test(boolean var)
    end
end
